[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "company_package"
dynamic = ["version"]
description = "A Python package for modeling companies across various sectors."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
    { name = "Boris", email = "boris.bolliet@gmail.com" }
]
keywords = ["companies", "finance", "healthcare", "technology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "argparse",
    "datetime",
    "importlib.resources"
]

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/yourusername/companies_package"
"Issues" = "https://github.com/yourusername/companies_package/issues"


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "company/version.py"  # Where to write the dynamic version


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"company" = ["data/*"]


[project.scripts]
company = "company.cli:main"